closes #619
