# server/swagger/swagger.yaml
@@ -687,9 +687,9 @@ paths:
               schema:
                 type: object
                 required:
-                  - items
+                  - soldItems
                 properties:
-                  items:
+                  soldItems:
                     type: array
                     items:
                       type: object
